<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.EditionCreationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_save"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#D80000"
                android:text="@string/save_button_text"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

            <Button
                android:id="@+id/button_save_copy"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#558B2F"
                android:text="@string/save_copy_button_text"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

            <Button
                android:id="@+id/button_erase_title"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_erase_2"
                app:layout_constraintEnd_toEndOf="@+id/title_input_layout"
                app:layout_constraintTop_toTopOf="@+id/title_input_layout" />


            <Button
                android:id="@+id/button_erase_text"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_erase_2"
                app:layout_constraintEnd_toEndOf="@+id/text_input_layout"
                app:layout_constraintTop_toTopOf="@+id/text_input_layout" />

            <ImageView
                android:id="@+id/button_close"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/btn_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@android:drawable/btn_dialog" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:progressTint="#FF8800"
                app:layout_constraintBottom_toBottomOf="@+id/button_close"
                app:layout_constraintEnd_toEndOf="@+id/button_close"
                app:layout_constraintStart_toStartOf="@+id/button_close"
                app:layout_constraintTop_toTopOf="@+id/button_close" />

            <Button
                android:id="@+id/button_create_pdf"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/pdf_icon"
                android:backgroundTint="#000000"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/button_close"
                app:layout_constraintEnd_toStartOf="@+id/button_close"
                app:layout_constraintTop_toTopOf="@+id/button_close" />

            <Button
                android:id="@+id/button_share_note"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/share_black"
                app:layout_constraintBottom_toBottomOf="@+id/button_close"
                app:layout_constraintEnd_toStartOf="@+id/button_create_pdf"
                app:layout_constraintTop_toTopOf="@+id/button_close" />

            <ProgressBar
                android:id="@+id/rec_progress_bar_title"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:progressTint="#FF8800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textView" />

            <ProgressBar
                android:id="@+id/rec_progress_bar_text"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:progressTint="#FF8800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_textView" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:text="@string/title_create"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/rec_progress_bar_title"
                app:layout_constraintTop_toBottomOf="@+id/layout_select" />

            <TextView
                android:id="@+id/text_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_create"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/rec_progress_bar_text"
                app:layout_constraintTop_toBottomOf="@+id/title_input_layout" />


            <ToggleButton
                android:id="@+id/mic_button_title"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/mic_black"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/title_textView"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/title_textView" />

            <ToggleButton
                android:id="@+id/mic_button_text"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/mic_black"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/text_textView"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/text_textView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/layout_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#888888"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/title_input_layout"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/select_lang_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/select_lang"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/design_default_color_on_primary" />

                <Spinner
                    android:id="@+id/spinner_lang_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:paddingTop="5dp"
                    android:paddingBottom="8dp"
                    android:popupBackground="#888888" />

            </LinearLayout>

            <Button
                android:id="@+id/button_info_edit_create"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/ic_help"
                app:layout_constraintEnd_toEndOf="@+id/button_close"
                app:layout_constraintStart_toStartOf="@+id/button_close"
                app:layout_constraintTop_toBottomOf="@+id/button_close" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/use_volume_up"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/mic_button_title"
                app:layout_constraintEnd_toEndOf="@+id/title_input_layout"
                app:layout_constraintTop_toTopOf="@+id/mic_button_title" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/use_volume_down"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/mic_button_text"
                app:layout_constraintEnd_toEndOf="@+id/text_input_layout"
                app:layout_constraintTop_toTopOf="@+id/mic_button_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/container_info_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

