<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".views.InfoMainFragment">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/divider_title_info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:id="@+id/scrollView_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:paddingBottom="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/design_default_color_background"
                    android:paddingBottom="50dp">

                    <TextView
                        android:id="@+id/textView_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:paddingStart="24dp"
                        android:paddingTop="24dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/info_text"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_coming_soon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:paddingStart="24dp"
                        android:paddingTop="24dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/coming_soon"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider_after_info_txt" />

                    <TextView
                        android:id="@+id/textView_privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:autoLink="web"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="24dp"
                        android:paddingTop="24dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/privacy_policy"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider_after_comingSoon_txt" />

                    <View
                        android:id="@+id/divider_after_info_txt"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="@+id/textView_info"
                        app:layout_constraintStart_toStartOf="@+id/textView_info"
                        app:layout_constraintTop_toBottomOf="@+id/textView_info" />

                    <View
                        android:id="@+id/divider_after_comingSoon_txt"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="@+id/textView_info"
                        app:layout_constraintStart_toStartOf="@+id/textView_info"
                        app:layout_constraintTop_toBottomOf="@+id/textView_coming_soon" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:clickable="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:singleLine="false"
        android:text="@string/text_name_app"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_title_info"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_fragment_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_dialog_close_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
